[package]
name = "snapinject_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
NtCreateUserProcess_rs = { git = "https://github.com/Teach2Breach/NtCreateUserProcess_rs.git" }
noldr = { git = "https://github.com/Teach2Breach/noldr.git", branch = "main" }
Snapshotting_rs = { git = "https://github.com/Teach2Breach/Snapshotting_rs" }
winapi = { version = "0.3.9", features = ["debugapi", "processsnapshot", "processthreadsapi", "handleapi", "winerror", "heapapi", "memoryapi"] }
windows = { version = "0.58.0", features = ["Win32_System_Diagnostics_ProcessSnapshotting", "Win32_System_Diagnostics_Debug", "Win32_System_Kernel"] }

dinvoke_rs = "0.2.0"
unwinder = "0.1.3"

RustVEHSyscalls = { git = "https://github.com/safedv/RustVEHSyscalls" }